--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -1,5 +1,121 @@
-/** Colors */
-$brand-primary:         #27ae60;
+/* ------------------------------------ *\
+    #VARIABLES
+\* ------------------------------------ */
 
-/** Box Model  */
-$spacer:                2rem;
+/* ------------------------------------ *\
+    #COLORS
+\* ------------------------------------ */
+
+/*
+ * 1) Color variables involve a two-tier system to keep colors in sync. The
+ *    first tier defines the brand and neutral colors, and the second tier
+ *    defines the application of those colors.
+ */
+
+/*
+ * Primary & Secondary Colors
+ * 1) Brand color variables use English names to define colors to make palettes easier to
+ *    identify.
+ * 2) Brand color variables should typically not be used directly in Sass partials. Instead, use
+ *    second-tier application colors.
+ *
+ */
+$color-brand-blue: rgb(57, 109, 255);
+$color-brand-dark-gray: rgb(38, 38, 38);
+$color-brand-light-gray: rgb(234, 234, 234);
+$color-yellow: rgb(255, 206, 8);
+$color-dark-blue: rgb(57, 40, 189);
+$color-poppy: rgb(255, 87, 59);
+$color-green: rgb(42, 216, 145);
+$color-fuschia: rgb(235, 65, 159);
+$color-white: rgb(255, 255, 255);
+
+/*
+ * Text Colors
+ * 1) These are non-linked text colors, such as body copy.
+*/
+$color-text: $color-brand-dark-gray;
+$color-text-light: $color-brand-light-gray;
+
+/*
+ * Heading Colors
+ * 1) These are non-linked heading colors, such as h2, h3, etc.
+ */
+$color-heading: $color-brand-dark-gray;
+$color-heading-light: $color-brand-light-gray;
+
+/*
+ * Text Link Colors
+ * 1) These are for linked text, such as a link found within an article,
+ *    navigation link, footer link, etc.
+ */
+$color-text-link: $color-brand-blue;
+$color-text-link-hover: $color-green;
+$color-text-link-visited: $color-dark-blue;
+$color-text-link-active: $color-green;
+
+$color-text-link-light: $color-white;
+$color-text-link-light-hover: $color-white;
+$color-text-link-light-visited: $color-white;
+
+/*
+ * Border Colors
+ * 1) Border colors are used as decoration or dividers, such as as a seperator
+ *    for navigation items, block borders, etc.
+ */
+$color-border: $color-brand-light-gray;
+
+/* ------------------------------------ *\
+    #TYPOGRAPHY
+\* ------------------------------------ */
+
+$font : AvenirNextLTPro-Regular, Arial, sans-serif;
+$font-demi : AvenirNextLTPro-Demi, Arial, sans-serif;
+$font-paul : PaulGroteskSoft-Bold, Arial, sans-serif;
+
+/* ------------------------------------ *\
+    #LAYOUT
+\* ------------------------------------ */
+$l-max-width: 80em;
+
+/**
+ * Spacing Defaults
+ */
+$space : 1em;
+$space-and-half : $space*1.5;
+$space-double : $space*2;
+$space-quad : $space*4;
+$space-half : $space/2;
+$pad : 1em;
+$pad-and-half : $pad*1.5;
+$pad-double : $pad*2;
+$pad-half : $pad/2;
+$pad-quarter :$pad/4;
+
+/* ------------------------------------ *\
+    #BORDERS
+\* ------------------------------------ */
+
+/* ------------------------------------ *\
+    #ANIMATION
+\* ------------------------------------ */
+$anim-speed-quick: 0.2s;
+$anim-ease: ease;
+
+/* ------------------------------------ *\
+    #BREAKPOINTS
+\* ------------------------------------ */
+
+/**
+ * Breakpoints
+ */
+$bp-small : 24em;
+$bp-small-2 : 29.75em;
+$bp-small-3 : 39.8em;
+$bp-med : 46.8em;
+$bp-med-2 : 48em;
+$bp-large : 50em;
+$bp-large-2 : 66em;
+$bp-xl : 73em;
+$bp-xxl : 89em;
+$bp-xxxl : 93em;
