--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -1,25 +1,20 @@
-@import "common/variables";
+/* ------------------------------------ *\
+  $ABSTRACTS
+\* ------------------------------------ */
 
-/** Import everything from autoload */
-// @import "./autoload/**/*";
-
-/**
- * Import npm dependencies
- *
- * Prefix your imports with `~` to grab from node_modules/
- * @see https://github.com/webpack-contrib/sass-loader#imports
- */
-// @import "~some-node-module";
-
-/** Import theme styles */
+@import "abstracts/variables";
+@import 'abstracts/fonts';
 
 /* ------------------------------------ *\
-  $COMMON
+  $VENDOR
 \* ------------------------------------ */
-@import 'common/fonts';
-@import 'common/body';
-@import 'common/text';
-@import 'common/links';
+
+/* ------------------------------------ *\
+  $BASE
+\* ------------------------------------ */
+@import 'base/body';
+@import 'base/text';
+@import 'base/links';
 
 /* ------------------------------------ *\
   $COMPONENTS
@@ -27,5 +22,5 @@
 @import 'components/wp-classes';
 
 /* ------------------------------------ *\
-  $LAYOUTS
+  $LAYOUT
 \* ------------------------------------ */
