--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -1,13 +1,13 @@
 /* ------------------------------------ *\
   $ABSTRACTS
 \* ------------------------------------ */
-
-@import "abstracts/variables";
+@import 'abstracts/variables';
 @import 'abstracts/fonts';
 
 /* ------------------------------------ *\
   $VENDOR
 \* ------------------------------------ */
+@import 'vendor/font-awesome';
 
 /* ------------------------------------ *\
   $BASE
@@ -15,12 +15,20 @@
 @import 'base/body';
 @import 'base/text';
 @import 'base/links';
+@import 'base/buttons';
+@import 'base/images';
+@import 'base/columns';
+@import 'base/inputs';
 
 /* ------------------------------------ *\
   $COMPONENTS
 \* ------------------------------------ */
 @import 'components/wp-classes';
+@import 'components/img-container';
+@import 'components/site-search';
 
 /* ------------------------------------ *\
   $LAYOUT
 \* ------------------------------------ */
+@import 'layout/site-header';
+@import 'layout/main';
