--- a/resources/assets/styles/abstracts/_variables.scss
+++ b/resources/assets/styles/abstracts/_variables.scss
@@ -3,6 +3,25 @@
 \* ------------------------------------ */
 
 /* ------------------------------------ *\
+    #MODULAR SCALE
+\* ------------------------------------ */
+
+/*
+ * Major 3rd scale based on http://www.modularscale.com/?1&em&1.25
+ */
+
+$ms-6: 3.815em;
+$ms-5: 3.052em;
+$ms-4: 2.441em;
+$ms-3: 1.953em;
+$ms-2: 1.563em;
+$ms-1: 1.25em;
+$ms-base: 1em;
+$ms--1: 0.8em;
+$ms--2: 0.64em;
+$ms--3: 0.512em;
+
+/* ------------------------------------ *\
     #COLORS
 \* ------------------------------------ */
 
@@ -99,16 +118,15 @@ $pad-quarter :$pad/4;
 /* ------------------------------------ *\
     #ANIMATION
 \* ------------------------------------ */
-$anim-speed-quick: 0.2s;
+$anim-speed-1: 1s;
+$anim-speed-05: 0.5s;
+$anim-speed-02: 0.2s;
 $anim-ease: ease;
 
 /* ------------------------------------ *\
     #BREAKPOINTS
 \* ------------------------------------ */
 
-/**
- * Breakpoints
- */
 $bp-small : 24em;
 $bp-small-2 : 29.75em;
 $bp-small-3 : 39.8em;
@@ -116,6 +134,6 @@ $bp-med : 46.8em;
 $bp-med-2 : 48em;
 $bp-large : 50em;
 $bp-large-2 : 66em;
-$bp-xl : 73em;
-$bp-xxl : 89em;
-$bp-xxxl : 93em;
+$bp-large-3 : 73em;
+$bp-xl : 89em;
+$bp-xl-2 : 93em;
