--- a/resources/assets/styles/base/_links.scss
+++ b/resources/assets/styles/base/_links.scss
@@ -9,7 +9,7 @@ a {
   color: $color-text-link;
   text-decoration: none;
   outline: 0;
-  transition: all $anim-speed-quick $anim-ease;
+  transition: all $anim-speed-02 $anim-ease;
 
   &:hover,
   &:focus {
