styled list items and single item page

--- a/patternlab/source/_patterns/01-molecules/site-logo.mustache
+++ b/patternlab/source/_patterns/01-molecules/site-logo.mustache
@@ -1,3 +1,3 @@
-<div class="site-header__logo col-1">
+<div class="site-header__logo m-col-1">
   <img src="{{ headerImg.src }}" alt="{{ headerImg.alt }}" />
 </div>
