--- a/patternlab/source/_patterns/02-organisms/site-header.mustache
+++ b/patternlab/source/_patterns/02-organisms/site-header.mustache
@@ -1,4 +1,9 @@
 <header class="site-header">
   {{> molecules-site-logo }}
+  <div class="mobile-nav s-col-3">
+    {{# listItems.two }}
+      {{> atoms-icon-button }}
+    {{/ listItems.two }}
+  </div>
   {{> molecules-search-bar }}
 </header>
