--- a/patternlab/source/css/style.css
+++ b/patternlab/source/css/style.css
@@ -46,6 +46,9 @@
 /* ------------------------------------ *    #LAYOUT
 \* ------------------------------------ */
 /**
+ * Column Widths
+ */
+/**
  * Spacing Defaults
  */
 /* ------------------------------------ *    #BORDERS
@@ -116,6 +119,108 @@
   font-family: 'PaulGroteskSoft-Bold';
   src: url("../../fonts/webfonts/346E9A_4_0.eot");
   src: url("../../fonts/webfonts/346E9A_4_0.eot?#iefix") format("embedded-opentype"), url("../../fonts/webfonts/346E9A_4_0.woff2") format("woff2"), url("../../fonts/webfonts/346E9A_4_0.woff") format("woff"), url("../../fonts/webfonts/346E9A_4_0.ttf") format("truetype"); }
+
+.bg-brand-blue {
+  background-color: #396dff; }
+
+.bg-brand-dark-gray {
+  background-color: #262626; }
+
+.bg-brand-light-gray {
+  background-color: #eaeaea; }
+
+.bg-yellow {
+  background-color: #ffce08; }
+
+.bg-dark-blue {
+  background-color: #3928bd; }
+
+.bg-poppy {
+  background-color: #ff573b; }
+
+.bg-green {
+  background-color: #2ad891; }
+
+.bg-fuschia {
+  background-color: #eb419f; }
+
+.bg-white {
+  background-color: white; }
+
+.col-1,
+.xs-col-1 {
+  width: calc(25% - (1em * 2)); }
+
+.col-2,
+.xs-col-2 {
+  width: calc(50% - (1em * 2)); }
+
+.col-3,
+.xs-col-3 {
+  width: calc(75% - (1em * 2)); }
+
+.col-4, .s-col-1,
+.m-col-1,
+.l-col-1,
+.s-col-2,
+.m-col-2,
+.l-col-2,
+.s-col-3,
+.m-col-3,
+.l-col-3,
+.xs-col-4,
+.s-col-4,
+.m-col-4,
+.l-col-4 {
+  width: calc(100% - (1em * 2)); }
+
+@media (min-width: 24em) {
+  .s-col-1 {
+    width: calc(25% - (1em * 2)); }
+  .s-col-2 {
+    width: calc(50% - (1em * 2)); }
+  .s-col-3 {
+    width: calc(75% - (1em * 2)); } }
+
+@media (min-width: 46.8em) {
+  .m-col-1 {
+    width: calc(25% - (1em * 2)); }
+  .m-col-2 {
+    width: calc(50% - (1em * 2)); }
+  .m-col-3 {
+    width: calc(75% - (1em * 2)); } }
+
+@media (min-width: 50em) {
+  .l-col-1 {
+    width: calc(25% - (1em * 2)); }
+  .l-col-2 {
+    width: calc(50% - (1em * 2)); }
+  .l-col-3 {
+    width: calc(75% - (1em * 2)); } }
+
+.col-1,
+.m-col-1,
+.l-col-1,
+.col-2,
+.m-col-2,
+.l-col-2,
+.col-3,
+.m-col-3,
+.l-col-3,
+.col-4,
+.s-col-1,
+.m-col-1,
+.l-col-1,
+.s-col-2,
+.m-col-2,
+.l-col-2,
+.s-col-3,
+.m-col-3,
+.l-col-3,
+.m-col-4,
+.l-col-4 {
+  margin-left: auto;
+  margin-right: auto; }
 
 /* ------------------------------------ *  $VENDOR
 \* ------------------------------------ */
@@ -2526,9 +2631,9 @@ a {
 
 button,
 .btn {
-  background-color: #396dff;
   color: white;
   font-size: 1em;
+  text-align: center;
   margin: 1em;
   padding: 1.25em;
   border: none;
@@ -2546,7 +2651,6 @@ button:last-child,
 
 button:hover,
 .btn:hover {
-  background-color: #0647ff;
   color: white; }
 
 .btn:active,
@@ -2554,16 +2658,16 @@ button:hover,
 .btn:visited {
   color: white; }
 
-.btn--green {
-  background-color: #2ad891; }
+.btn__icon {
+  padding: 1.25em 2.441em; }
 
-.btn--green:hover {
+.btn.bg-brand-blue:hover {
+  background-color: #0647ff; }
+
+.btn.bg-green:hover {
   background-color: #20af75; }
 
-.button--poppy {
-  background-color: #ff573b; }
-
-.button--poppy:hover {
+.btn.bg-poppy:hover {
   background-color: #ff2b08; }
 
 img {
@@ -2572,25 +2676,6 @@ img {
   max-height: calc(100vh - 10rem);
   margin-left: auto;
   margin-right: auto; }
-
-.col-1 {
-  width: calc(25% - (1em * 2)); }
-
-.col-2 {
-  width: calc(50% - (1em * 2)); }
-
-.col-3 {
-  width: calc(75% - (1em * 2)); }
-
-.col-4 {
-  width: calc(100% - (1em * 2)); }
-
-.col-1,
-.col-2,
-.col-3,
-.col-4 {
-  margin-left: 1em;
-  margin-right: 1em; }
 
 input[type="text"] {
   border-radius: 0.512em;
@@ -2605,6 +2690,9 @@ input[type="text"]:focus {
   background-color: #262626;
   color: white;
   outline: none; }
+
+label {
+  margin-right: 1em; }
 
 /* ------------------------------------ *  $COMPONENTS
 \* ------------------------------------ */
@@ -2655,8 +2743,15 @@ input[type="text"]:focus {
   object-fit: contain; }
 
 .img-container__main {
-  padding: 0 1.953em;
-  border-right: 1px solid #262626; }
+  margin-bottom: 1.25em; }
+
+.img-container__list-item {
+  background-color: #eaeaea; }
+
+@media (min-width: 46.8em) {
+  .img-container__main {
+    padding: 0 1.953em;
+    border-right: 1px solid #262626; } }
 
 .site-search {
   border: 1px solid #eaeaea;
@@ -2687,6 +2782,52 @@ input[type="text"]:focus {
   color: white;
   outline: 0; }
 
+.mobile-nav {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: stretch;
+  justify-content: space-between;
+  flex-grow: 0;
+  flex-shrink: 0; }
+
+.mobile-nav > * {
+  flex-grow: 1;
+  margin: 0.64em; }
+
+@media (min-width: 46.8em) {
+  .mobile-nav {
+    display: none; } }
+
+.list-item {
+  width: calc(100% - (1em * 2));
+  list-style: none;
+  border-radius: 0.64em;
+  overflow: hidden;
+  box-shadow: 0 4px 11px 0 rgba(38, 38, 38, 0.5);
+  margin: 0 1em 1.953em;
+  flex-grow: 0;
+  flex-shrink: 0; }
+
+.list-item__title {
+  margin: 1em;
+  text-align: center; }
+
+@media (min-width: 29.75em) {
+  .list-item {
+    width: calc(50% - (1em * 2)); } }
+
+@media (min-width: 50em) {
+  .list-item {
+    width: calc(25% - (1em * 2)); } }
+
+.item-list {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: stretch;
+  justify-content: space-between;
+  margin: 1em;
+  padding: 0; }
+
 /* ------------------------------------ *  $LAYOUT
 \* ------------------------------------ */
 .site-header {
@@ -2697,7 +2838,31 @@ input[type="text"]:focus {
   background-color: #2ad891; }
 
 .site-header__logo {
-  padding: 1.953em 3.052em 1.953em 0; }
+  padding: 1.953em 1.953em 1.953em 0; }
+
+.site-header__logo img {
+  max-height: 5.96em; }
+
+.site-header__search {
+  display: none;
+  font-size: 1.563em; }
+
+.site-header__search input {
+  padding: 0.512em; }
+
+.site-header__search button {
+  line-height: initial;
+  padding: 0.512em; }
+
+@media (min-width: 46.8em) {
+  .site-header__search {
+    display: block; } }
+
+.site-footer {
+  border-top: 1px solid #396dff;
+  margin-top: 1.563em;
+  padding: 1.563em;
+  text-align: center; }
 
 .main {
   max-width: 1200px;
@@ -2711,7 +2876,9 @@ input[type="text"]:focus {
   justify-content: space-between; }
 
 .main--single-item__button-wrapper {
-  margin: 1.953em 0; }
+  margin: 1.953em 0;
+  display: flex;
+  align-items: stretch; }
 
 .main--single-item::after {
   content: '';
