--- a/resources/assets/styles/layout/_main.scss
+++ b/resources/assets/styles/layout/_main.scss
@@ -13,6 +13,8 @@
 
 .main--single-item__button-wrapper {
   margin: $ms-3 0;
+  display: flex;
+  align-items: stretch;
 }
 
 .main--single-item::after {
