completed design for items-list, items-search, and navigation

--- a/patternlab/source/_patterns/02-organisms/sidebar-nav.mustache
+++ b/patternlab/source/_patterns/02-organisms/sidebar-nav.mustache
@@ -1,3 +1,18 @@
 <div class="sidebar-nav">
   {{> molecules-sidebar-nav-buttons }}
+  <ul class="sidebar-nav__links">
+    <li class="sidebar-nav__link">About AFSP</li>
+    <li class="sidebar-nav__link">Chapters</li>
+    <li class="sidebar-nav__link">Walks</li>
+    <li class="sidebar-nav__link">Non-Walk Fundraising</li>
+    <li class="sidebar-nav__link">Research</li>
+    <li class="sidebar-nav__link">Prevention Education</li>
+    <li class="sidebar-nav__link">Advoacy &amp; Public Policy</li>
+    <li class="sidebar-nav__link">Loss &amp; Healing</li>
+    <li class="sidebar-nav__link">Project 2025</li>
+    <li class="sidebar-nav__link">Communications</li>
+    <li class="sidebar-nav__link">Program Trackers</li>
+    <li class="sidebar-nav__link">Staff Links</li>
+    <li class="sidebar-nav__link">Help</li>
+  </ul>
 </div>
