--- a/resources/assets/styles/base/_text.scss
+++ b/resources/assets/styles/base/_text.scss
@@ -17,7 +17,7 @@ h1 {
   font-family: $font-paul;
   font-size: $ms-3;
   line-height: $ms-1;
-  margin: $ms-base 0;
+  margin: $ms--1 0;
   padding: 0;
 }
 
