--- a/resources/assets/styles/components/_mobile-nav.scss
+++ b/resources/assets/styles/components/_mobile-nav.scss
@@ -5,11 +5,19 @@
   justify-content: space-between;
   flex-grow: 0;
   flex-shrink: 0;
+  margin-bottom: $ms-1;
 }
 
-.mobile-nav > * {
+.mobile-nav .btn {
   flex-grow: 1;
   margin: $ms--2;
+  border-radius: $ms--2;
+  text-align: center;
+}
+
+.mobile-nav .btn .fa {
+  vertical-align: text-top;
+  font-size: $ms-1;
 }
 
 @media (min-width: $bp-med) {
