--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -5,6 +5,7 @@
 @import 'abstracts/fonts';
 @import 'abstracts/colors';
 @import 'abstracts/backgrounds';
+@import 'abstracts/highlights';
 @import 'abstracts/columns';
 
 /* ------------------------------------ *\
