basic design completed

--- a/patternlab/source/_patterns/00-atoms/02-buttons/button.mustache
+++ b/patternlab/source/_patterns/00-atoms/02-buttons/button.mustache
@@ -1,1 +1,1 @@
-<a class="btn {{ btn.class }}" href="{{ btn.href }}">{{ btn.text }}</a>
+<a class="btn btn--rounded {{ btn.class }}" href="{{ btn.href }}">{{ btn.text }}</a>
