--- a/patternlab/source/_patterns/02-organisms/sidebar-nav.mustache
+++ b/patternlab/source/_patterns/02-organisms/sidebar-nav.mustache
@@ -1,18 +1,18 @@
 <div class="sidebar-nav">
   {{> molecules-sidebar-nav-buttons }}
   <ul class="sidebar-nav__links">
-    <li class="sidebar-nav__link">About AFSP</li>
-    <li class="sidebar-nav__link">Chapters</li>
-    <li class="sidebar-nav__link">Walks</li>
-    <li class="sidebar-nav__link">Non-Walk Fundraising</li>
-    <li class="sidebar-nav__link">Research</li>
-    <li class="sidebar-nav__link">Prevention Education</li>
-    <li class="sidebar-nav__link">Advoacy &amp; Public Policy</li>
-    <li class="sidebar-nav__link">Loss &amp; Healing</li>
-    <li class="sidebar-nav__link">Project 2025</li>
-    <li class="sidebar-nav__link">Communications</li>
-    <li class="sidebar-nav__link">Program Trackers</li>
-    <li class="sidebar-nav__link">Staff Links</li>
-    <li class="sidebar-nav__link">Help</li>
+    <li class="sidebar-nav__link"><a href="#"><span>About AFSP</span></a></li>
+    <li class="sidebar-nav__link"><a href="#"><span>Chapters</span></a></li>
+    <li class="sidebar-nav__link"><a href="#"><span>Walks</span></a></li>
+    <li class="sidebar-nav__link"><a href="#"><span>Non-Walk Fundraising</span></a></li>
+    <li class="sidebar-nav__link"><a href="#"><span>Research</span></a></li>
+    <li class="sidebar-nav__link"><a href="#"><span>Prevention Education</span></a></li>
+    <li class="sidebar-nav__link"><a href="#"><span>Advoacy &amp; Public Policy</span></a></li>
+    <li class="sidebar-nav__link"><a href="#"><span>Loss &amp; Healing</span></a></li>
+    <li class="sidebar-nav__link"><a href="#"><span>Project 2025</span></a></li>
+    <li class="sidebar-nav__link"><a href="#"><span>Communications</span></a></li>
+    <li class="sidebar-nav__link"><a href="#"><span>Program Trackers</span></a></li>
+    <li class="sidebar-nav__link"><a href="#"><span>Staff Links</span></a></li>
+    <li class="sidebar-nav__link"><a href="#"><span>Help</span></a></li>
   </ul>
 </div>
