--- a/resources/assets/styles/abstracts/_variables.scss
+++ b/resources/assets/styles/abstracts/_variables.scss
@@ -10,23 +10,23 @@
  * Major 3rd scale based on http://www.modularscale.com/?1&em&1.25
  */
 
-$ms-8: 5.96em;
-$ms-7: 4.768em;
-$ms-6: 3.815em;
-$ms-5: 3.052em;
-$ms-4: 2.441em;
-$ms-3: 1.953em;
-$ms-2: 1.563em;
-$ms-1: 1.25em;
-$ms-base: 1em;
-$ms--1: 0.8em;
-$ms--2: 0.64em;
-$ms--3: 0.512em;
-$ms--4: 0.41em;
-$ms--5: 0.328em;
-$ms--6: 0.262em;
-$ms--7: 0.21em;
-$ms--8: 0.168em;
+$ms-8: 5.96rem;
+$ms-7: 4.768rem;
+$ms-6: 3.815rem;
+$ms-5: 3.052rem;
+$ms-4: 2.441rem;
+$ms-3: 1.953rem;
+$ms-2: 1.563rem;
+$ms-1: 1.25rem;
+$ms-base: 1rem;
+$ms--1: 0.8rem;
+$ms--2: 0.64rem;
+$ms--3: 0.512rem;
+$ms--4: 0.41rem;
+$ms--5: 0.328rem;
+$ms--6: 0.262rem;
+$ms--7: 0.21rem;
+$ms--8: 0.168rem;
 
 /* ------------------------------------ *\
     #COLORS
