--- a/resources/assets/styles/base/_buttons.scss
+++ b/resources/assets/styles/base/_buttons.scss
@@ -4,6 +4,11 @@ button,
   border: none;
 }
 
+.btn--rounded {
+  border-radius: $ms--2;
+  padding: $ms--1;
+}
+
 .btn__icon {
   padding: $ms-1 $ms-4;
 }
