--- a/resources/assets/styles/components/_items-list.scss
+++ b/resources/assets/styles/components/_items-list.scss
@@ -3,6 +3,6 @@
   flex-flow: row wrap;
   align-items: stretch;
   justify-content: space-between;
-  margin: $ms-base;
+  margin: $ms-base 0 0;
   padding: 0;
 }
