--- a/resources/assets/styles/layout/_sidebar-nav.scss
+++ b/resources/assets/styles/layout/_sidebar-nav.scss
@@ -13,10 +13,6 @@
   margin: $ms-1;
 }
 
-.sidebar-nav__buttons a:hover {
-  
-}
-
 .sidebar-nav__links {
   padding: 0;
   margin: $ms-1;
@@ -27,18 +23,49 @@
 }
 
 .sidebar-nav__link {
-  margin-bottom: $ms--1;
-  font-size: $ms--1;
+  margin-bottom: $ms-1;
+  font-size: $ms-1;
 }
 
-.sidebar-nav__link::after {
+.sidebar-nav__link a {
+  color: $color-brand-light-gray;
+  position: relative;
+  padding: $ms--4;
+}
+
+.sidebar-nav__link span {
+  position: relative;
+  z-index: 100;
+}
+
+.sidebar-nav__link a::after {
   font-family: 'FontAwesome';
   content: $fa-var-caret-right;
   padding-left: $ms--2;
+  position: relative;
+  z-index: 100;
+}
+
+.sidebar-nav__link a::before {
+  content: ' ';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: calc(#{$ms-1} + (#{$ms--3} * 2));
+  background-color: $color-brand-blue;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: all $anim-speed-02 $anim-ease;
+}
+
+.sidebar-nav__link a:hover::before {
+  transform: scaleX(1);
 }
 
 @media (min-width: $bp-med) {
   .sidebar-nav {
     display: block;
+    position: relative;
   }
 }
