--- a/resources/assets/styles/layout/_site-header.scss
+++ b/resources/assets/styles/layout/_site-header.scss
@@ -4,6 +4,8 @@
   align-items: center;
   justify-content: space-between;
   background-color: $color-green;
+  position: relative;
+  z-index: 100;
 }
 
 .site-header__logo {
@@ -32,6 +34,10 @@
 }
 
 @media (min-width: $bp-med) {
+  .site-header__logo {
+    text-align: left;
+  }
+
   .site-header__search {
     display: block;
   }
