--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -23,6 +23,7 @@
 @import 'base/images';
 @import 'base/inputs';
 @import 'base/labels';
+@import 'base/video';
 
 /* ------------------------------------ *\
   $COMPONENTS
@@ -33,6 +34,8 @@
 @import 'components/mobile-nav';
 @import 'components/list-items';
 @import 'components/items-list';
+@import 'components/full-page';
+@import 'components/login-form';
 
 /* ------------------------------------ *\
   $LAYOUT
