--- a/patternlab/source/_patterns/00-atoms/02-buttons/icon-button.mustache
+++ b/patternlab/source/_patterns/00-atoms/02-buttons/icon-button.mustache
@@ -1,1 +1,1 @@
-<a class="btn btn__icon {{ btn.class }}" href="{{ btn.href }}"><i class="fa {{ btn.icon }}"></i></a>
+<a class="btn btn--rounded btn__icon {{ btn.class }}" href="{{ btn.href }}"><i class="fa {{ btn.icon }}"></i></a>
