--- a/patternlab/source/css/style.css
+++ b/patternlab/source/css/style.css
@@ -144,10 +144,10 @@
 .color-fuschia {
   color: #eb419f; }
 
-.color-white {
+.color-white, .login-form__form button {
   color: white; }
 
-.bg-brand-blue {
+.bg-brand-blue, .login-form__form button {
   background-color: #396dff; }
 
 .bg-brand-dark-gray {
@@ -223,51 +223,51 @@
 .hl-brand-light-gray,
 .hl-yellow,
 .hl-white {
-  padding: 0.168em 0.41em; }
+  padding: 0.168rem 0.41rem; }
 
 .col-1,
 .xs-col-1 {
-  width: calc(8% - (1em * 2)); }
+  width: calc(8% - (1rem * 2)); }
 
 .col-2,
 .xs-col-2 {
-  width: calc(17% - (1em * 2)); }
+  width: calc(17% - (1rem * 2)); }
 
 .col-3,
 .xs-col-3 {
-  width: calc(25% - (1em * 2)); }
+  width: calc(25% - (1rem * 2)); }
 
 .col-4,
 .xs-col-4 {
-  width: calc(33% - (1em * 2)); }
+  width: calc(33% - (1rem * 2)); }
 
 .col-5,
 .xs-col-5 {
-  width: calc(42% - (1em * 2)); }
+  width: calc(42% - (1rem * 2)); }
 
 .col-6,
 .xs-col-6 {
-  width: calc(50% - (1em * 2)); }
+  width: calc(50% - (1rem * 2)); }
 
 .col-7,
 .xs-col-7 {
-  width: calc(58% - (1em * 2)); }
+  width: calc(58% - (1rem * 2)); }
 
 .col-8,
 .xs-col-8 {
-  width: calc(67% - (1em * 2)); }
+  width: calc(67% - (1rem * 2)); }
 
 .col-9,
 .xs-col-9 {
-  width: calc(75% - (1em * 2)); }
+  width: calc(75% - (1rem * 2)); }
 
 .col-10,
 .xs-col-10 {
-  width: calc(83% - (1em * 2)); }
+  width: calc(83% - (1rem * 2)); }
 
 .col-11,
 .xs-col-11 {
-  width: calc(91% - (1em * 2)); }
+  width: calc(91% - (1rem * 2)); }
 
 .col-12, .s-col-1,
 .m-col-1,
@@ -306,79 +306,79 @@
 .s-col-12,
 .m-col-12,
 .l-col-12 {
-  width: calc(100% - (1em * 2)); }
+  width: calc(100% - (1rem * 2)); }
 
 @media (min-width: 24em) {
   .s-col-1 {
-    width: calc(8% - (1em * 2)); }
+    width: calc(8% - (1rem * 2)); }
   .s-col-2 {
-    width: calc(17% - (1em * 2)); }
+    width: calc(17% - (1rem * 2)); }
   .s-col-3 {
-    width: calc(25% - (1em * 2)); }
+    width: calc(25% - (1rem * 2)); }
   .s-col-4 {
-    width: calc(33% - (1em * 2)); }
+    width: calc(33% - (1rem * 2)); }
   .s-col-5 {
-    width: calc(42% - (1em * 2)); }
+    width: calc(42% - (1rem * 2)); }
   .s-col-6 {
-    width: calc(50% - (1em * 2)); }
+    width: calc(50% - (1rem * 2)); }
   .s-col-7 {
-    width: calc(58% - (1em * 2)); }
+    width: calc(58% - (1rem * 2)); }
   .s-col-8 {
-    width: calc(67% - (1em * 2)); }
+    width: calc(67% - (1rem * 2)); }
   .s-col-9 {
-    width: calc(75% - (1em * 2)); }
+    width: calc(75% - (1rem * 2)); }
   .s-col-10 {
-    width: calc(83% - (1em * 2)); }
+    width: calc(83% - (1rem * 2)); }
   .s-col-11 {
-    width: calc(91% - (1em * 2)); } }
+    width: calc(91% - (1rem * 2)); } }
 
 @media (min-width: 45em) {
   .m-col-1 {
-    width: calc(8% - (1em * 2)); }
+    width: calc(8% - (1rem * 2)); }
   .m-col-2 {
-    width: calc(17% - (1em * 2)); }
+    width: calc(17% - (1rem * 2)); }
   .m-col-3 {
-    width: calc(25% - (1em * 2)); }
+    width: calc(25% - (1rem * 2)); }
   .m-col-4 {
-    width: calc(33% - (1em * 2)); }
+    width: calc(33% - (1rem * 2)); }
   .m-col-5 {
-    width: calc(42% - (1em * 2)); }
+    width: calc(42% - (1rem * 2)); }
   .m-col-6 {
-    width: calc(50% - (1em * 2)); }
+    width: calc(50% - (1rem * 2)); }
   .m-col-7 {
-    width: calc(58% - (1em * 2)); }
+    width: calc(58% - (1rem * 2)); }
   .m-col-8 {
-    width: calc(67% - (1em * 2)); }
+    width: calc(67% - (1rem * 2)); }
   .m-col-9 {
-    width: calc(75% - (1em * 2)); }
+    width: calc(75% - (1rem * 2)); }
   .m-col-10 {
-    width: calc(83% - (1em * 2)); }
+    width: calc(83% - (1rem * 2)); }
   .m-col-11 {
-    width: calc(91% - (1em * 2)); } }
+    width: calc(91% - (1rem * 2)); } }
 
 @media (min-width: 66em) {
   .l-col-1 {
-    width: calc(8% - (1em * 2)); }
+    width: calc(8% - (1rem * 2)); }
   .l-col-2 {
-    width: calc(17% - (1em * 2)); }
+    width: calc(17% - (1rem * 2)); }
   .l-col-3 {
-    width: calc(25% - (1em * 2)); }
+    width: calc(25% - (1rem * 2)); }
   .l-col-4 {
-    width: calc(33% - (1em * 2)); }
+    width: calc(33% - (1rem * 2)); }
   .l-col-5 {
-    width: calc(42% - (1em * 2)); }
+    width: calc(42% - (1rem * 2)); }
   .l-col-6 {
-    width: calc(50% - (1em * 2)); }
+    width: calc(50% - (1rem * 2)); }
   .l-col-7 {
-    width: calc(58% - (1em * 2)); }
+    width: calc(58% - (1rem * 2)); }
   .l-col-8 {
-    width: calc(67% - (1em * 2)); }
+    width: calc(67% - (1rem * 2)); }
   .l-col-9 {
-    width: calc(75% - (1em * 2)); }
+    width: calc(75% - (1rem * 2)); }
   .l-col-10 {
-    width: calc(83% - (1em * 2)); }
+    width: calc(83% - (1rem * 2)); }
   .l-col-11 {
-    width: calc(91% - (1em * 2)); } }
+    width: calc(91% - (1rem * 2)); } }
 
 .col-1,
 .xs-col-1,
@@ -2819,12 +2819,13 @@ body {
   background: white;
   color: #262626;
   font-family: AvenirNextLTPro-Regular, Arial, sans-serif;
-  font-size: 1em;
-  line-height: 1.563em;
+  font-size: 1rem;
+  line-height: 1.563rem;
   -webkit-text-size-adjust: 100%;
   min-height: 100vh;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  margin: 0; }
 
 /* ------------------------------------ *    #TEXT
 \* ------------------------------------ */
@@ -2840,31 +2841,31 @@ p {
  */
 h1 {
   font-family: PaulGroteskSoft-Bold, Arial, sans-serif;
-  font-size: 1.953em;
-  line-height: 1.25em;
-  margin: 0.8em 0;
+  font-size: 1.953rem;
+  line-height: 1.953rem;
+  margin: 1.953rem 0;
   padding: 0; }
 
 h2 {
   font-family: AvenirNextLTPro-Demi, Arial, sans-serif;
-  font-size: 1.563em;
-  line-height: 1.25em;
-  margin: 1em 0;
+  font-size: 1.563rem;
+  line-height: 1.563rem;
+  margin: 1.953rem 0 1.25rem;
   padding: 0; }
 
 h3 {
   font-family: AvenirNextLTPro-Demi, Arial, sans-serif;
-  font-size: 1.25em;
-  line-height: 1.25em;
-  margin: 1em 0;
+  font-size: 1.25rem;
+  line-height: 1.25rem;
+  margin: 1rem 0;
   padding: 0; }
 
 h4,
 h5,
 h6 {
   font-family: AvenirNextLTPro-Demi, Arial, sans-serif;
-  font-size: 1em;
-  margin: 1em 0;
+  font-size: 1rem;
+  margin: 1rem 0;
   padding: 0; }
 
 .brand {
@@ -2885,13 +2886,17 @@ a {
 
 button,
 .btn {
-  font-size: 1em;
+  font-size: 1rem;
   border: none; }
 
-.btn__icon {
-  padding: 1.25em 2.441em; }
+.btn--rounded {
+  border-radius: 0.64rem;
+  padding: 0.8rem; }
 
-.btn.bg-brand-blue,
+.btn__icon {
+  padding: 1.25rem 2.441rem; }
+
+.btn.bg-brand-blue, .login-form__form button.btn,
 .btn.bg-brand-dark-gray,
 .btn.bg-dark-blue,
 .btn.bg-poppy,
@@ -2904,7 +2909,7 @@ button,
 .btn.bg-white {
   color: #262626; }
 
-.btn.bg-brand-blue:hover {
+.btn.bg-brand-blue:hover, .login-form__form button.btn:hover {
   background-color: #0647ff; }
 
 .btn.bg-brand-dark-gray:hover {
@@ -2931,66 +2936,51 @@ button,
 .btn.bg-white:hover {
   background-color: #e6e6e6; }
 
-.list-item__img {
-  background-color: #eaeaea;
-  width: 100%;
-  height: calc(3.815em * 4);
-  overflow: hidden;
-  margin: 0 auto;
+img,
+.img {
   object-fit: contain; }
 
-@media (min-width: 24em) {
-  .list-item__img {
-    height: calc(3.815em * 6); } }
+.img--full {
+  width: 100%;
+  height: 100%; }
 
-@media (min-width: 31em) {
-  .list-item__img {
-    height: calc(3.815em * 4); } }
+label {
+  display: inline-block; }
 
-@media (min-width: 38em) {
-  .list-item__img {
-    height: calc(3.815em * 3); } }
-
-@media (min-width: 45em) {
-  .list-item__img {
-    height: calc(3.815em * 6); } }
-
-@media (min-width: 52em) {
-  .list-item__img {
-    height: calc(3.815em * 4); } }
-
-@media (min-width: 59em) {
-  .list-item__img {
-    height: calc(3.815em * 5); } }
-
-@media (min-width: 66em) {
-  .list-item__img {
-    height: calc(3.815em * 4); } }
-
-@media (min-width: 73em) {
-  .list-item__img {
-    height: calc(3.815em * 3); } }
-
-@media (min-width: 80em) {
-  .list-item__img {
-    height: calc(3.815em * 4); } }
-
-input[type="text"] {
-  border-radius: 0.512em;
+input[type="text"],
+input[type="password"] {
+  border-radius: 0.512rem;
   border: 1px solid #eaeaea;
-  padding: 0.8em;
-  font-size: 1em; }
+  padding: 0.8rem;
+  font-size: 1rem; }
 
-input[type="text"]::placeholder {
+input[type="text"]::placeholder,
+input[type="password"]::placeholder {
   color: #eaeaea; }
 
-input[type="text"]:focus {
+input[type="text"]:focus,
+input[type="password"]:focus {
   background-color: #262626;
   color: white;
   outline: none; }
 
 label {
-  margin-right: 1em; }
+  margin-right: 1rem; }
+
+.video__wrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+  margin: 1.25rem auto; }
+
+.video__wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
 
 /* ------------------------------------ *  $COMPONENTS
 \* ------------------------------------ */
@@ -3041,16 +3031,17 @@ label {
   object-fit: contain; }
 
 .img-container__main {
-  margin-bottom: 1.25em; }
+  margin-bottom: 1.25rem;
+  max-height: 100vh; }
 
 @media (min-width: 45em) {
   .img-container__main {
-    padding: 0 1.953em;
+    padding: 0 1.953rem;
     border-right: 1px solid #262626; } }
 
 .site-search {
   border: 1px solid #eaeaea;
-  border-radius: 0.512em;
+  border-radius: 0.512rem;
   position: relative;
   overflow: hidden; }
 
@@ -3058,12 +3049,12 @@ label {
   border: none;
   border-right: 1px solid #eaeaea;
   border-radius: 0;
-  width: calc(100% - 3.052em); }
+  width: calc(100% - 3.052rem); }
 
 .site-search button {
   position: absolute;
-  width: 3.052em;
-  line-height: 3.052em;
+  width: 3.052rem;
+  line-height: 3.052rem;
   text-align: center;
   cursor: pointer;
   background-color: white;
@@ -3084,29 +3075,29 @@ label {
   justify-content: space-between;
   flex-grow: 0;
   flex-shrink: 0;
-  margin-bottom: 1.25em; }
+  margin-bottom: 1.25rem; }
 
 .mobile-nav .btn {
   flex-grow: 1;
-  margin: 0.64em;
-  border-radius: 0.64em;
+  margin: 0.64rem;
+  border-radius: 0.64rem;
   text-align: center; }
 
 .mobile-nav .btn .fa {
   vertical-align: text-top;
-  font-size: 1.25em; }
+  font-size: 1.25rem; }
 
 @media (min-width: 45em) {
   .mobile-nav {
     display: none; } }
 
 .list-item {
-  width: calc(100% - (1em * 2));
+  width: calc(100% - (1rem * 2));
   list-style: none;
-  border-radius: 0.64em;
+  border-radius: 0.64rem;
   overflow: hidden;
   box-shadow: 0 4px 11px 0 rgba(38, 38, 38, 0.5);
-  margin: 0 1em 1.953em;
+  margin: 0 1rem 1.953rem;
   flex-grow: 0;
   flex-shrink: 0;
   position: relative;
@@ -3115,7 +3106,7 @@ label {
   transition: all 0.2s ease-in-out; }
 
 .list-item:hover {
-  bottom: 0.168em;
+  bottom: 0.168rem;
   box-shadow: 0 6px 20px 0 rgba(38, 38, 38, 0.5); }
 
 .list-item a,
@@ -3124,56 +3115,144 @@ label {
 .list-item a:active {
   color: #262626; }
 
+.list-item__img {
+  background-color: #eaeaea;
+  width: 100%;
+  height: calc(3.815rem * 4);
+  overflow: hidden;
+  margin: 0 auto; }
+
 .list-item__info {
   position: relative; }
 
 .list-item__title {
-  margin: 1.25em 1.563em;
+  margin: 1.25rem 1.563rem;
   text-align: center; }
 
 .list-item__info .fa {
   position: absolute;
-  bottom: -0.41em; }
+  bottom: -0.41rem; }
 
 .list-item__info .fa-folder {
   color: #396dff;
-  left: 0.8em; }
+  left: 0.8rem; }
 
 .list-item__info .fa-heart {
   color: #ff573b;
-  right: 0.8em; }
+  right: 0.8rem; }
+
+@media (min-width: 24em) {
+  .list-item__img {
+    height: calc(3.815rem * 6); } }
 
 @media (min-width: 31em) {
   .list-item {
-    width: calc(50% - (1em * 2)); } }
+    width: calc(50% - (1rem * 2)); }
+  .list-item__img {
+    height: calc(3.815rem * 4); } }
 
 @media (min-width: 38em) {
   .list-item {
-    width: calc(33% - (1em * 2)); } }
+    width: calc(33% - (1rem * 2)); }
+  .list-item__img {
+    height: calc(3.815rem * 3); } }
 
 @media (min-width: 45em) {
   .list-item {
-    width: calc(100% - (1em * 2)); } }
+    width: calc(100% - (1rem * 2)); }
+  .list-item__img {
+    height: calc(3.815rem * 6); } }
 
 @media (min-width: 52em) {
   .list-item {
-    width: calc(50% - (1em * 2)); } }
+    width: calc(50% - (1rem * 2)); }
+  .list-item__img {
+    height: calc(3.815rem * 4); } }
+
+@media (min-width: 59em) {
+  .list-item__img {
+    height: calc(3.815rem * 5); } }
 
 @media (min-width: 66em) {
   .list-item {
-    width: calc(33% - (1em * 2)); } }
+    width: calc(33% - (1rem * 2)); }
+  .list-item__img {
+    height: calc(3.815rem * 4); } }
 
 @media (min-width: 73em) {
   .list-item {
-    width: calc(25% - (1em * 2)); } }
+    width: calc(25% - (1rem * 2)); }
+  .list-item__img {
+    height: calc(3.815rem * 3); } }
+
+@media (min-width: 80em) {
+  .list-item__img {
+    height: calc(3.815rem * 4); } }
 
 .item-list {
   display: flex;
   flex-flow: row wrap;
   align-items: stretch;
   justify-content: space-between;
-  margin: 1em;
+  margin: 1rem 0 0;
   padding: 0; }
+
+.full-page {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1; }
+
+.full-page img {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover; }
+
+.login-form__container {
+  position: relative;
+  z-index: 100;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.6);
+  text-align: center;
+  padding: 1.563rem 0; }
+
+.login-form__header {
+  margin-bottom: 0.8rem; }
+
+.login-form__info {
+  font-size: 0.8rem;
+  line-height: 1rem; }
+
+.login-form__form {
+  margin: 1.953rem auto; }
+
+.login-form__form > * {
+  margin-bottom: 1rem; }
+
+.login-form__input-container {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between; }
+
+.login-form__form button {
+  font-size: 1.25rem;
+  border-radius: 0.64rem;
+  padding: 0.64rem 1.563rem;
+  margin-top: 1rem; }
+
+@media (min-width: 45em) {
+  .login-form__container {
+    width: calc(75% - (1rem * 2));
+    margin: 3.052rem auto;
+    border-radius: 1rem;
+    box-shadow: 0 4px 11px rgba(38, 38, 38, 0.6); } }
+
+@media (min-width: 66em) {
+  .login-form__container {
+    width: calc(50% - (1rem * 2)); } }
 
 /* ------------------------------------ *  $LAYOUT
 \* ------------------------------------ */
@@ -3182,39 +3261,51 @@ label {
   flex-flow: row wrap;
   align-items: center;
   justify-content: space-between;
-  background-color: #2ad891; }
+  background-color: #2ad891;
+  position: relative;
+  z-index: 100; }
 
 .site-header__logo {
-  padding: 1.953em 0;
+  padding: 1.953rem 0;
   text-align: center; }
 
 .site-header__logo img {
   max-width: 100%;
-  max-height: 5.96em; }
+  max-height: 5.96rem; }
 
 .site-header__search {
   display: none;
-  font-size: 1.563em;
+  font-size: 1.563rem;
   border: 0; }
 
 .site-header__search input {
-  padding: 0.512em; }
+  padding: 0.512rem; }
 
 .site-header__search button {
   line-height: initial;
-  padding: 0.512em; }
+  padding: 0.512rem; }
 
 @media (min-width: 45em) {
+  .site-header__logo {
+    text-align: left; }
   .site-header__search {
     display: block; } }
 
 .site-footer {
   border-top: 1px solid #396dff;
-  padding: 1.563em;
-  text-align: center; }
+  padding: 1.563rem;
+  text-align: center;
+  position: relative;
+  z-index: 100;
+  width: 100vw;
+  background-color: rgba(255, 255, 255, 0.6); }
+
+.site-footer p {
+  margin: 0;
+  padding: 0; }
 
 .sidebar-nav {
-  width: calc(3.815em * 5);
+  width: calc(3.815rem * 5);
   background-color: #262626;
   display: none; }
 
@@ -3223,29 +3314,56 @@ label {
   flex-flow: row wrap;
   align-items: center;
   justify-content: space-between;
-  font-size: 1.563em;
-  margin: 1.25em; }
+  font-size: 1.563rem;
+  margin: 1.25rem; }
 
 .sidebar-nav__links {
   padding: 0;
-  margin: 1.25em;
-  font-size: 1.563em;
+  margin: 1.25rem;
+  font-size: 1.563rem;
   font-family: PaulGroteskSoft-Bold, Arial, sans-serif;
   color: white;
   list-style: none; }
 
 .sidebar-nav__link {
-  margin-bottom: 0.8em;
-  font-size: 0.8em; }
+  margin-bottom: 1.25rem;
+  font-size: 1.25rem; }
 
-.sidebar-nav__link::after {
+.sidebar-nav__link a {
+  color: #eaeaea;
+  position: relative;
+  padding: 0.41rem; }
+
+.sidebar-nav__link span {
+  position: relative;
+  z-index: 100; }
+
+.sidebar-nav__link a::after {
   font-family: 'FontAwesome';
   content: "";
-  padding-left: 0.64em; }
+  padding-left: 0.64rem;
+  position: relative;
+  z-index: 100; }
+
+.sidebar-nav__link a::before {
+  content: ' ';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: calc(1.25rem + (0.512rem * 2));
+  background-color: #396dff;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: all 0.2s ease; }
+
+.sidebar-nav__link a:hover::before {
+  transform: scaleX(1); }
 
 @media (min-width: 45em) {
   .sidebar-nav {
-    display: block; } }
+    display: block;
+    position: relative; } }
 
 .page-content {
   display: flex;
@@ -3254,10 +3372,11 @@ label {
   justify-content: space-between; }
 
 .main {
-  width: calc(100% - (1em * 2));
+  width: calc(100% - (1rem * 2));
   max-width: 1200px;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  padding-top: 1rem; }
 
 .main--single-item {
   display: flex;
@@ -3266,9 +3385,12 @@ label {
   justify-content: space-between; }
 
 .main--single-item__button-wrapper {
-  margin: 1.953em 0;
+  margin: 1.953rem 0;
   display: flex;
   align-items: stretch; }
+
+.main--single-item__button-wrapper .btn:not(:first-child) {
+  margin-left: 1rem; }
 
 .main--single-item::after {
   content: '';
@@ -3277,4 +3399,4 @@ label {
 
 @media (min-width: 45em) {
   .main {
-    width: calc(calc(100% - (1em * 2)) - (3.815em * 5) - 2em); } }
+    width: calc(calc(100% - (1rem * 2)) - (3.815rem * 5) - 2em); } }
