--- a/resources/assets/styles/base/_inputs.scss
+++ b/resources/assets/styles/base/_inputs.scss
@@ -1,15 +1,22 @@
-input[type="text"] {
+label {
+  display: inline-block;
+}
+
+input[type="text"],
+input[type="password"] {
   border-radius: $ms--3;
   border: 1px solid $color-brand-light-gray;
   padding: $ms--1;
   font-size: $ms-base;
 }
 
-input[type="text"]::placeholder {
+input[type="text"]::placeholder,
+input[type="password"]::placeholder {
   color: $color-brand-light-gray;
 }
 
-input[type="text"]:focus {
+input[type="text"]:focus,
+input[type="password"]:focus {
   background-color: $color-brand-dark-gray;
   color: $color-white;
   outline: none;
